--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Heatmaps</title>
-    <style>
-      html, body, #map-canvas {
-        height: 90%;
-        margin: 0px;
-        padding: 0px
-      }
-      #panel {
-        position: absolute;
-        top: 5px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBE1OyijO6SC7uqIWZgbEtt1ZUVeXZnhsU&libraries=visualization"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="app.js"></script>
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>Heatmaps</title>
+        <style>
+          html, body, #map-canvas {
+              height: 90%;
+              margin: 0px;
+              padding: 0px
+          }
+          #panel {
+              position: absolute;
+              top: 5px;
+              left: 50%;
+              margin-left: -180px;
+              z-index: 5;
+              background-color: #fff;
+              padding: 5px;
+              border: 1px solid #999;
+          }
+        </style>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBE1OyijO6SC7uqIWZgbEtt1ZUVeXZnhsU&libraries=visualization">
+        </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="app.js"></script>
+    </head>
 
-  <body>
-    <div id="panel">
-      <button onclick="toggleHeatmap()">Toggle Heatmap</button>
-    </div>
-    <div id="map-canvas"></div>
-  </body>
+    <body>
+        <div id="panel">
+            <button onclick="toggleHeatmap()">Toggle Heatmap</button>
+        </div>
+        <div id="map-canvas"></div>
+    </body>
 </html>
